Adding elementType and fillAlphaWithMaxValue to MatrixProductOfTwoPowers; adding ability to not fill alpha by 255; adding ability to choose "unchanged" element type in ChangePrecision and return the actual element type